# ias_package_shell

./: .editorconfig  .gitignore  Makefile  README.md  TODO.md  aspell_project.pws  base.gmk  package_shell  spell_check.sh
artifacts/ias-package-shell/: case.sh  changelog  package_shell.gmk
doc/: README.md  another-packaging-doc.md  automation_components.dia  ias-guided-packaging-basic-inheritance-model.md  ias-guided-packaging-basic-inheritence-model.md  ias-guided-packaging-directory-allocations.md  ias-guided-packaging-full-project-path-mappings.md  ias-guided-packaging-introduction.md  ias-guided-packaging-package-build-environment-setup.md  ias-guided-packaging-release-process-annotated.md  ias-guided-packaging-shortened-release-process.md  index.md  making-your-own-repos.md  rebasing_a_project.md  rpm_macros.md  svn_checkin_example.md  vcs.md  why.md
doc/base_infra_diagram/: infrastructure_overview.dia  installed_layout.txt  project_layout.txt
doc/diagrams/: do_exports.sh  infrastructure_library_components.dia  project_components.dia  software_development_lifecycle.dia
doc/layout_explanations/: README.md
doc/more/: Good_Project_Systems.md  lecture_notes_1.md
ias-package-shell/: artifact_variables.gmk  case.sh  changelog  deb_control  rpm_specific
ias-package-shell/DEBIAN/: control
ias-package-shell/RPM/: specfile.spec
src/templates/project_dir/examples/pip/setuptools_pyproject_example/: pyproject.toml
tests/: .gitignore  Makefile  README.md  answers.txt  answers_ias_package_shell_test_fresh_package.txt  clean.sh  test_a.sh
(+230 files in other folders)
